--- a/RL_vehicles_references.bib
+++ b/RL_vehicles_references.bib
@@ -333,3 +333,11 @@ series = {ICML'10}
    month={Feb},
    pages={183–195}
 }
+
+@article{TD3,
+author = {Fujimoto, Scott and Hoof, Herke and Meger, Dave},
+year = {2018},
+month = {02},
+pages = {},
+title = {Addressing Function Approximation Error in Actor-Critic Methods}
+}
