Kommentare fuer Veroeffentlichung angepasst

--- a/RL_vehicles.tex
+++ b/RL_vehicles.tex
@@ -24,10 +24,10 @@
 
 % local macros
 
-\providecommand{\martin}[1]{\red{#1}} %literal, Preprint
-\providecommand{\martinc}[1]{\green{[#1]}} %comment, Preprint
-%\providecommand{\martin}[1]{#1}                  %fuer Veroeffentlichung
-%\providecommand{\martinc}[1]{#1}                  %fuer Veroeffentlichung
+%\providecommand{\martin}[1]{\red{#1}} %literal, Preprint
+%\providecommand{\martinc}[1]{\green{[#1]}} %comment, Preprint
+\providecommand{\martin}[1]{#1}                  %fuer Veroeffentlichung
+\providecommand{\martinc}[1]{}                  %fuer Veroeffentlichung
 
 \providecommand{\sup}[1]{^{\mathrm{#1}}}  % upright superscript
 \providecommand{\sub}[1]{_{\mathrm{#1}}}  % upright subscript $b\sub{comf}$
