AR1 in OU umgerechnet; time gap bei Szenario 5.4 als Plot eingefügt

--- a/RL_vehicles_references.bib
+++ b/RL_vehicles_references.bib
@@ -341,3 +341,18 @@ month = {02},
 pages = {},
 title = {Addressing Function Approximation Error in Actor-Critic Methods}
 }
+
+@article{OU,
+  title = {On the Theory of the Brownian Motion},
+  author = {Uhlenbeck, G. E. and Ornstein, L. S.},
+  journal = {Phys. Rev.},
+  volume = {36},
+  issue = {5},
+  pages = {823--841},
+  numpages = {0},
+  year = {1930},
+  month = {Sep},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRev.36.823},
+  url = {https://link.aps.org/doi/10.1103/PhysRev.36.823}
+}
