changed citation style, added .bst file and corrected the RL*.bib file

--- a/RL_vehicles_references.bib
+++ b/RL_vehicles_references.bib
@@ -103,31 +103,35 @@ keywords = "Car-following model, Traffic oscillations, Flow instability, Acceler
   year={2015}
 }
 
+
 @inproceedings{OnRampMerge2020,
-author = {Lin, Yuan and McPhee, John and Azad, Nasser},
-year = {2020},
-month = {10},
-pages = {7-14},
-title = {Anti-Jerk On-Ramp Merging Using Deep Reinforcement Learning},
-doi = {10.1109/IV47402.2020.9304647}
+  title={Anti-jerk on-ramp merging using deep reinforcement learning},
+  author={Lin, Yuan and McPhee, John and Azad, Nasser L},
+  booktitle={2020 IEEE Intelligent Vehicles Symposium (IV)},
+  pages={7--14},
+  year={2020},
+  organization={IEEE},
+  doi = {10.1109/IV47402.2020.9304647}
 }
 
 @article{OnRampMerge2018,
-author = {Wang, Pin and Chan, Ching-Yao},
-year = {2018},
-month = {03},
-pages = {},
-title = {Autonomous Ramp Merge Maneuver Based on Reinforcement Learning with Continuous Action Space}
+  title={Autonomous ramp merge maneuver based on reinforcement learning with continuous action space},
+  author={Wang, Pin and Chan, Ching-Yao},
+  journal={arXiv preprint arXiv:1803.09203},
+  year={2018}
 }
 
+
 @inproceedings{intersection1,
-author = {Isele, David and Rahimi, Reza and Cosgun, Akansel and Subramanian, Kaushik and Fujimura, Kikuo},
-year = {2018},
-month = {05},
-pages = {2034-2039},
-title = {Navigating Occluded Intersections with Autonomous Vehicles Using Deep Reinforcement Learning},
-doi = {10.1109/ICRA.2018.8461233}
+  title={Navigating occluded intersections with autonomous vehicles using deep reinforcement learning},
+  author={Isele, David and Rahimi, Reza and Cosgun, Akansel and Subramanian, Kaushik and Fujimura, Kikuo},
+  booktitle={2018 IEEE International Conference on Robotics and Automation (ICRA)},
+  pages={2034--2039},
+  year={2018},
+  organization={IEEE},
+  doi={10.1109/ICRA.2018.8461233}
 }
+
 
 @INPROCEEDINGS{intersection2,
   author={G. {Tolebi} and N. S. {Dairbekov} and D. {Kurmankhojayev} and R. {Mussabayev}},
@@ -222,13 +226,18 @@ author = {Mofan Zhou and Xiaobo Qu and Xiaopeng Li},
 keywords = {Recurrent neural networks, Traffic flow dynamics, Car-following, Oscillation}
 }
 
+
 @article{ComparisonRLvsMPC,
-author = {Lin, Yuan and McPhee, John and Azad, Nasser},
-year = {2019},
-month = {10},
-pages = {},
-title = {Comparison of Deep Reinforcement Learning and Model Predictive Control for Adaptive Cruise Control}
+  title={Comparison of deep reinforcement learning and model predictive control for adaptive cruise control},
+  author={Lin, Yuan and McPhee, John and Azad, Nasser L},
+  journal={IEEE Transactions on Intelligent Vehicles},
+  volume={6},
+  number={2},
+  pages={221--231},
+  year={2020},
+  publisher={IEEE}
 }
+
 
 @INPROCEEDINGS{DissipatingStopAndGoWaves,
   author={A. R. {Kreidieh} and C. {Wu} and A. M. {Bayen}},
@@ -241,13 +250,15 @@ title = {Comparison of Deep Reinforcement Learning and Model Predictive Control 
   doi={10.1109/ITSC.2018.8569485}
 }
 
-@unknown{DampenStopAndGoTraffic,
-author = {Jiang, Liming and Xie, Yuanchang and Chen, Danjue and Li, Tienan and Evans, Nicholas},
-year = {2020},
-month = {05},
-pages = {},
-title = {Dampen the Stop-and-Go Traffic with Connected and Automated Vehicles- A Deep Reinforcement Learning Approach}
+@misc{DampenStopAndGoTraffic,
+      title={Dampen the Stop-and-Go Traffic with Connected and Automated Vehicles -- A Deep Reinforcement Learning Approach}, 
+      author={Liming Jiang and Yuanchang Xie and Danjue Chen and Tienan Li and Nicholas G. Evans},
+      year={2020},
+      eprint={2005.08245},
+      archivePrefix={arXiv},
+      primaryClass={eess.SP}
 }
+
 
 @article{DDPG,
 author = {Lillicrap, Timothy and Hunt, Jonathan and Pritzel, Alexander and Heess, Nicolas and Erez, Tom and Tassa, Yuval and Silver, David and Wierstra, Daan},
@@ -258,15 +269,17 @@ title = {Continuous control with deep reinforcement learning},
 journal = {CoRR}
 }
 
+
 @inproceedings{MRL,
-author = {Bhat, Sooraj and Jr, Charles and Mateas, Michael},
-year = {2006},
-month = {01},
-pages = {},
-title = {On the Difficulty of Modular Reinforcement Learning for Real-World Partial Programming.},
-volume = {1},
-journal = {Proceedings of the National Conference on Artificial Intelligence}
+  title={On the difficulty of modular reinforcement learning for real-world partial programming},
+  author={Bhat, Sooraj and Isbell, Charles L and Mateas, Michael},
+  booktitle={AAAI},
+  pages={318--323},
+  year={2006},
+  volume = {1},
+  journal = {Proceedings of the National Conference on Artificial Intelligence}
 }
+
 
 @misc{MRLexample1,
       title={Modular Deep Reinforcement Learning for Continuous Motion Planning with Temporal Logic}, 
@@ -289,27 +302,32 @@ journal = {Proceedings of the National Conference on Artificial Intelligence}
 }
 
 
-
-@article{MRLexample3,
-author = {Andreas, Jacob and Klein, Dan and Levine, Sergey},
-year = {2016},
-month = {11},
-pages = {},
-title = {Modular Multitask Reinforcement Learning with Policy Sketches}
+@inproceedings{MRLexample3,
+  title={Modular multitask reinforcement learning with policy sketches},
+  author={Andreas, Jacob and Klein, Dan and Levine, Sergey},
+  booktitle={International Conference on Machine Learning},
+  pages={166--175},
+  year={2017},
+  organization={PMLR}
 }
+  
 
 @inproceedings{idm_plus,
-author = {Schakel, W.J. and Arem, B. and Netten, Bart},
-year = {2010},
-month = {10},
-pages = {759 - 764},
-title = {Effects of Cooperative Adaptive Cruise Control on traffic flow stability},
+  title={Effects of cooperative adaptive cruise control on traffic flow stability},
+  author={Schakel, Wouter J and Van Arem, Bart and Netten, Bart D},
+  booktitle={13th International IEEE Conference on Intelligent Transportation Systems},
+  pages={759--764},
+  year={2010},
+  organization={IEEE},
 doi = {10.1109/ITSC.2010.5625133}
 }
+
+
 
 @inproceedings{relu,
 author = {Nair, Vinod and Hinton, Geoffrey E.},
 title = {Rectified Linear Units Improve Restricted Boltzmann Machines},
+booktitle={ICML 2010},
 year = {2010},
 isbn = {9781605589077},
 publisher = {Omnipress},
@@ -334,13 +352,15 @@ series = {ICML'10}
    pages={183–195}
 }
 
-@article{TD3,
-author = {Fujimoto, Scott and Hoof, Herke and Meger, Dave},
-year = {2018},
-month = {02},
-pages = {},
-title = {Addressing Function Approximation Error in Actor-Critic Methods}
+@inproceedings{TD3,
+  title={Addressing function approximation error in actor-critic methods},
+  author={Fujimoto, Scott and Hoof, Herke and Meger, David},
+  booktitle={International Conference on Machine Learning},
+  pages={1587--1596},
+  year={2018},
+  organization={PMLR}
 }
+
 
 @article{OU,
   title = {On the Theory of the Brownian Motion},
