--- a/RL_vehicles.tex
+++ b/RL_vehicles.tex
@@ -3,8 +3,9 @@
 % overridden, `Elsevier LaTeX' style produces error messages
 
 \documentclass[review]{elsarticle}
+%\documentclass[review]{article}
 %\documentclass{elsarticle}
-
+%\usepackage[square,sort,comma,numbers]{natbib}
 \usepackage{hyperref}
 \usepackage{lineno,hyperref} \modulolinenumbers[5]
 \usepackage{graphicx}
@@ -44,8 +45,13 @@
 %% remove the % from the second line of the style you would like to use.
 %%%%%%%%%%%%%%%%%%%%%%%
 
+%% Standard TRB Journal 
+% https://typeset.io/formats/elsevier/transportation-research-part-b-methodological/546541542f818ab098cbe512c7e84d3c
+%\bibliographystyle{elsarticle-num}
+\bibliographystyle{elsarticle-harv}
+
 %% Numbered
-\bibliographystyle{model1-num-names}
+%\bibliographystyle{model1-num-names}
 
 %% Numbered without titles
 %\bibliographystyle{model1a-num-names}
