pdf mit name-year

--- a/RL_vehicles.tex
+++ b/RL_vehicles.tex
@@ -49,6 +49,7 @@
 % https://typeset.io/formats/elsevier/transportation-research-part-b-methodological/546541542f818ab098cbe512c7e84d3c
 %\bibliographystyle{elsarticle-num}
 \bibliographystyle{elsarticle-harv}
+%\bibliographystyle{nonsense}
 
 %% Numbered
 %\bibliographystyle{model1-num-names}
